syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_relation_project_user;

message DsRelationProjectUserBean {

     int32 id= 1;
     int32 user_id=2 ;
     optional int32 project_id=3 ;
     optional int32  perm=4 ;
     optional string create_time=5 ;
     optional string update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationProjectUserBeanService {
  rpc ListDsRelationProjectUserBeans(ListDsRelationProjectUserBeansRequest) returns (ListDsRelationProjectUserBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationProjectUserBeans"
    };
  }

  rpc GetDsRelationProjectUserBean(GetDsRelationProjectUserBeanRequest) returns (DsRelationProjectUserBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationProjectUserBeans/*}"
    };
  }

  rpc CreateDsRelationProjectUserBean(CreateDsRelationProjectUserBeanRequest) returns (DsRelationProjectUserBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationProjectUserBeans"
      body: "DsRelationProjectUserBean"
    };
  }

  rpc UpdateDsRelationProjectUserBean(UpdateDsRelationProjectUserBeanRequest) returns (DsRelationProjectUserBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationProjectUserBean.name=DsRelationProjectUserBeans/*}"
      body: "DsRelationProjectUserBean"
    };
  }

  rpc DeleteDsRelationProjectUserBean(DeleteDsRelationProjectUserBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationProjectUserBeans/*}"
    };
  }
}

// message DsRelationProjectUserBean {
// ! This should be defined elsewhere
// }

message ListDsRelationProjectUserBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsRelationProjectUserBeansResponse {
  // The field name should match the noun "DsRelationProjectUserBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationProjectUserBean DsRelationProjectUserBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationProjectUserBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationProjectUserBeanRequest {
  // The parent resource name where the DsRelationProjectUserBean is to be created.
  string parent = 1;

  // The DsRelationProjectUserBean id to use for this DsRelationProjectUserBean.
  string DsRelationProjectUserBean_id = 2;

  // The DsRelationProjectUserBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationProjectUserBean DsRelationProjectUserBean = 3;
}

message UpdateDsRelationProjectUserBeanRequest {
  // The DsRelationProjectUserBean resource which replaces the resource on the server.
  DsRelationProjectUserBean DsRelationProjectUserBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationProjectUserBeanRequest {
  // The resource name of the DsRelationProjectUserBean to be deleted.
  string name = 1;
}
